--- a/ov-ims-order/src/main/resources/application-dev.yml
+++ b/ov-ims-order/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ov-ims-product
+    name: ov-ims-order
   datasource:
     url: jdbc:h2:mem:dev
     username: dev
