--- a/ov-ims-order/src/main/resources/application.yml
+++ b/ov-ims-order/src/main/resources/application.yml
@@ -22,3 +22,9 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui
+
+domain:
+  rules:
+    return:
+      max-days: 30
+      min-quantity: 1
