--- a/ov-ims-inv/src/main/resources/application-dev.yml
+++ b/ov-ims-inv/src/main/resources/application-dev.yml
@@ -1,4 +1,15 @@
+server:
+  port: 8081
+
 spring:
+  kafka:
+    bootstrap-servers: kafka-1:9092
+    consumer:
+      group-id: io.github.jotabrc
+      client-id: inventory-1
+      auto-offset-reset: latest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   application:
     name: ov-ims-inv
   datasource:
@@ -20,7 +31,7 @@ spring:
       path: /h2-console
       settings:
         trace: false
-        web-allow-others: false
+        web-allow-others: true
 
 springdoc:
   api-docs:
