--- a/ov-ims-inv/src/main/resources/application.yml
+++ b/ov-ims-inv/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 server:
+  port: 8081
 
 spring:
+  kafka:
+    bootstrap-servers: kafka-1:9092
+    consumer:
+      group-id: io.github.jotabrc
+      client-id: inventory-1
+      auto-offset-reset: latest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   application:
     name: ov-ims-inv
   datasource:
@@ -25,6 +34,5 @@ springdoc:
 
 domain:
   rules:
-    return:
-      max-days: 30
-      min-quantity: 1
+    save:
+      max-retries: 5
