--- a/ov-ims-inv/pom.xml
+++ b/ov-ims-inv/pom.xml
@@ -102,6 +102,11 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.5.18</version>
+		</dependency>
 	</dependencies>
 
 	<build>
