--- a/ov-ims-product/src/main/resources/application.yml
+++ b/ov-ims-product/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 server:
+  port: 8080
 
 spring:
+  kafka:
+    bootstrap-servers: kafka-1:9092
+    consumer:
+      group-id: io.github.jotabrc
+      client-id: product-1
+      auto-offset-reset: latest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   application:
     name: ov-ims-product
   datasource:
@@ -22,3 +31,4 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui
+
